# GAI_course_project

./: .gitignore  LICENSE  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
configs/: README.md  inference_config.yaml  prior_generation_config.yaml  rare_tokens.json  token_selection_config.yaml  train_dog_dreambooth.yaml  train_duck_toy_dreambooth.yaml
configs/inference/: dog.yaml  duck.yaml  inference_dog_config.yaml  inference_duck_toy.yaml  inference_monster_toy.yaml
configs/prior/: prior_generation_dog_config.yaml  prior_generation_monster_toy_config.yaml
configs/train/: train_dog_dreambooth.yaml  train_duck_toy_dreambooth.yaml  train_monster_toy_dreambooth.yaml
data/: .gitignore  README.md
deploy/: Dockerfile.api  Dockerfile.app  README.md  api.py  app.py
documents/: test.md
inference_outputs/: README.md
notebooks/: DreamBooth.ipynb  DreamBooth_3 copy.ipynb  DreamBooth_3_updated.ipynb  POC_DreamBooth.ipynb  POC_DreamBooth_v0.ipynb  POC_DreamBooth_v2_flow_generation.ipynb  POC_DreamBooth_v3_prepared_prior_generation.ipynb  README.md  clearml.ipynb  config.txt  diffusion_text-img.ipynb  test.ipynb
notebooks/experiments_and_raw_code/: DreamBooth.ipynb  (+3 more)
outputs/: README.md
scripts/: README.md  find_rare_token.py  generate_priors.py  inference.py  inference_example.sh  path_setup.sh  prior_generation_example.sh  select_token_example.sh  train.py  train_example.sh
src/: README.md  config_loader.py  data.py  data_handling.py  enums.py  model_setup.py  predict.py  predict_dummy.py  prior_generation.py  trainer.py  utils.py
